# diet_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py
app/models/: nutrition.py
app/schemas/: nutrition.py
app/services/: gemini_client.py  nutrition_service.py
