[project]
name = "diet-api"
version = "0.1.0"
description = "API de informações nutricionais com inteligencia artificial."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.61.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy",
    "uvicorn>=0.40.0",
]
